# benchmarking_shapes

./: LICENSE  README.md  geopandas.ipynb  pyproject.toml
benchmarks/: level_0.py
notebooks/: geopandas.ipynb
scripts/benchmarks/: level_0.py
scripts/conversion/: celldega_to.py
src/benchmarking_shapes/level_0/: __init__.py  _types.py  celldega_parquet_reader.py  tiled_reader.py
